--- a/_posts/2020-09-08-r2dii-analysis-0-1-0-is-now-on-cran/r2dii-analysis-0-1-0-is-now-on-cran.html
+++ b/_posts/2020-09-08-r2dii-analysis-0-1-0-is-now-on-cran/r2dii-analysis-0-1-0-is-now-on-cran.html
@@ -35,13 +35,15 @@ several bugfixes." />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="This release includes a significant rework of the `target_sda()` function, and 
 several bugfixes." />
+  <meta property="og:image" content="https://2degreesinvesting.github.io/preview.jpg" />
   <meta property="og:locale" content="en_US" />
   
   <!--  https://dev.twitter.com/cards/types/summary -->
-  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="r2dii.analysis 0.1.0 is now on CRAN" />
   <meta property="twitter:description" content="This release includes a significant rework of the `target_sda()` function, and 
 several bugfixes." />
+  <meta property="twitter:image" content="https://2degreesinvesting.github.io/preview.jpg" />
   <meta property="twitter:site" content="@jdhoffart" />
   <meta property="twitter:creator" content="@jdhoffart" />
   
@@ -49,7 +51,7 @@ several bugfixes." />
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","base_url","date","output","categories","twitter"]}},"value":[{"type":"character","attributes":{},"value":["r2dii.analysis 0.1.0 is now on CRAN"]},{"type":"character","attributes":{},"value":["This release includes a significant rework of the `target_sda()` function, and \nseveral bugfixes. \n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Jackson Hoffart"]},{"type":"character","attributes":{},"value":["https://github.com/jdhoffa"]}]}]},{"type":"character","attributes":{},"value":["https://2degreesinvesting.github.io/"]},{"type":"character","attributes":{},"value":["09-08-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]},{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["r2dii","package","release"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@jdhoffart"]},{"type":"character","attributes":{},"value":["@jdhoffart"]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","base_url","date","output","preview","categories","twitter"]}},"value":[{"type":"character","attributes":{},"value":["r2dii.analysis 0.1.0 is now on CRAN"]},{"type":"character","attributes":{},"value":["This release includes a significant rework of the `target_sda()` function, and \nseveral bugfixes. \n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Jackson Hoffart"]},{"type":"character","attributes":{},"value":["https://github.com/jdhoffa"]}]}]},{"type":"character","attributes":{},"value":["https://2degreesinvesting.github.io/"]},{"type":"character","attributes":{},"value":["09-08-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]},{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["preview.jpg"]},{"type":"character","attributes":{},"value":["r2dii","package","release"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@jdhoffart"]},{"type":"character","attributes":{},"value":["@jdhoffart"]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
