--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,7 @@ function init_posts_list() {
 <div class="publishedDate">Sept. 8, 2020</div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="posts/2020-09-08-r2dii-analysis-0-1-0-is-now-on-cran/preview.jpg"/>
 </div>
 <div class="description">
 <h2>r2dii.analysis 0.1.0 is now on CRAN</h2>
