--- a/index.html
+++ b/index.html
@@ -2306,9 +2306,7 @@ function init_posts_list() {
 <div class="dt-author">Jackson Hoffart</div>
 </div>
 </div>
-<div class="thumbnail">
-<img/>
-</div>
+<div class="thumbnail"></div>
 <div class="description">
 <h2>r2dii.data 0.2.0 is now on CRAN</h2>
 <div class="dt-tags">
