--- a/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.html
+++ b/_posts/2021-10-22-workflow-to-release-an-r-package-to-cran/workflow-to-release-an-r-package-to-cran.html
@@ -1966,7 +1966,7 @@ distill-header .nav a {
 </ul>
 </nav>
 <hr class="d-toc-separator" />
-<p>The goal of this post is to help you release an R package to CRAN. It works whether you use the GitHub workflow or the Gitflow workflow (<a href="https://youtu.be/3glCxjn7xnU">video</a>).</p>
+<p>The goal of this post is to help you release an R package to CRAN. It works whether you use the GitHub workflow or the Gitflow workflow (<a href="https://youtu.be/nRV6oFmn_uM">video</a>).</p>
 <h3 id="prepare-for-release">Prepare for release</h3>
 <p>Consider the release of <a href="https://github.com/maurolepore/releaseworkflow">maurolepore/releaseworkflow</a> <code>v0.0.1</code><a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>.</p>
 <ul>
