--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,7 @@ function init_posts_list() {
 <img data-src="posts/2021-10-18-r2dii-plot-0-2-0/preview.jpg"/>
 </div>
 <div class="description">
-<h2>r2dii-plot 0.2.0 is now on CRAN</h2>
+<h2>r2dii.plot 0.2.0 is now on CRAN</h2>
 <p>New styling functions, new arguments to `plot_*()`, and bug fixes.</p>
 </div>
 </a>
