--- a/_posts/2022-03-02-ald-becomes-abcd/2022-03-02-ald-becomes-abcd.html
+++ b/_posts/2022-03-02-ald-becomes-abcd/2022-03-02-ald-becomes-abcd.html
@@ -49,7 +49,7 @@ Asset-Based Company Data." />
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter"]}},"value":[{"type":"character","attributes":{},"value":["PACTA Terminology Update: ALD becomes ABCD"]},{"type":"character","attributes":{},"value":["Explaining the decision to change terminology from Asset-Level Data to \nAsset-Based Company Data.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Jackson Hoffart"]},{"type":"character","attributes":{},"value":["https://github.com/jdhoffa"]}]}]},{"type":"character","attributes":{},"value":["2022-03-02"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article","toc","toc_depth","self_contained"]}},"value":[{"type":"NULL"},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]},{"type":"logical","attributes":{},"value":[true]}]},{"type":"character","attributes":{},"value":["methodology"]},{"type":"character","attributes":{},"value":["preview.jpg"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@jdhoffart"]},{"type":"character","attributes":{},"value":["@jdhoffart"]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter"]}},"value":[{"type":"character","attributes":{},"value":["PACTA Terminology Update: ALD becomes ABCD"]},{"type":"character","attributes":{},"value":["Explaining the decision to change terminology from Asset-Level Data to \nAsset-Based Company Data.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Jackson Hoffart"]},{"type":"character","attributes":{},"value":["https://github.com/jdhoffa"]}]}]},{"type":"character","attributes":{},"value":["2022-03-02"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article","toc","toc_depth","self_contained"]}},"value":[{"type":"NULL"},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]},{"type":"logical","attributes":{},"value":[true]}]},{"type":"character","attributes":{},"value":["methodology"]},{"type":"character","attributes":{},"value":["preview.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@jdhoffart"]},{"type":"character","attributes":{},"value":["@jdhoffart"]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1972,12 +1972,12 @@ distill-header .nav a {
 <p>Historically, this last dataset was referred to as the “Asset-Level Data” (ALD). This name was a natural choice, since the underlying data describes the production of physical assets that are owned and operated by various companies globally.</p>
 <p>An asset-level dataset might contain the following information:</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="alurikpazx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="ascmfvokhv" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#alurikpazx .gt_table {
+#ascmfvokhv .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2002,7 +2002,7 @@ distill-header .nav a {
   border-left-color: #D3D3D3;
 }
 
-#alurikpazx .gt_heading {
+#ascmfvokhv .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2014,7 +2014,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#alurikpazx .gt_title {
+#ascmfvokhv .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2026,7 +2026,7 @@ distill-header .nav a {
   border-bottom-width: 0;
 }
 
-#alurikpazx .gt_subtitle {
+#ascmfvokhv .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2038,13 +2038,13 @@ distill-header .nav a {
   border-top-width: 0;
 }
 
-#alurikpazx .gt_bottom_border {
+#ascmfvokhv .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#alurikpazx .gt_col_headings {
+#ascmfvokhv .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2059,7 +2059,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#alurikpazx .gt_col_heading {
+#ascmfvokhv .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2079,7 +2079,7 @@ distill-header .nav a {
   overflow-x: hidden;
 }
 
-#alurikpazx .gt_column_spanner_outer {
+#ascmfvokhv .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2091,15 +2091,15 @@ distill-header .nav a {
   padding-right: 4px;
 }
 
-#alurikpazx .gt_column_spanner_outer:first-child {
+#ascmfvokhv .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#alurikpazx .gt_column_spanner_outer:last-child {
+#ascmfvokhv .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#alurikpazx .gt_column_spanner {
+#ascmfvokhv .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2111,7 +2111,7 @@ distill-header .nav a {
   width: 100%;
 }
 
-#alurikpazx .gt_group_heading {
+#ascmfvokhv .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2136,7 +2136,7 @@ distill-header .nav a {
   vertical-align: middle;
 }
 
-#alurikpazx .gt_empty_group_heading {
+#ascmfvokhv .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2151,15 +2151,15 @@ distill-header .nav a {
   vertical-align: middle;
 }
 
-#alurikpazx .gt_from_md > :first-child {
+#ascmfvokhv .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#alurikpazx .gt_from_md > :last-child {
+#ascmfvokhv .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#alurikpazx .gt_row {
+#ascmfvokhv .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2178,7 +2178,7 @@ distill-header .nav a {
   overflow-x: hidden;
 }
 
-#alurikpazx .gt_stub {
+#ascmfvokhv .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2191,7 +2191,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#alurikpazx .gt_stub_row_group {
+#ascmfvokhv .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2205,11 +2205,11 @@ distill-header .nav a {
   vertical-align: top;
 }
 
-#alurikpazx .gt_row_group_first td {
+#ascmfvokhv .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#alurikpazx .gt_summary_row {
+#ascmfvokhv .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2219,16 +2219,16 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#alurikpazx .gt_first_summary_row {
+#ascmfvokhv .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#alurikpazx .gt_first_summary_row.thick {
+#ascmfvokhv .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#alurikpazx .gt_last_summary_row {
+#ascmfvokhv .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2238,7 +2238,7 @@ distill-header .nav a {
   border-bottom-color: #D3D3D3;
 }
 
-#alurikpazx .gt_grand_summary_row {
+#ascmfvokhv .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2248,7 +2248,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#alurikpazx .gt_first_grand_summary_row {
+#ascmfvokhv .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2258,11 +2258,11 @@ distill-header .nav a {
   border-top-color: #D3D3D3;
 }
 
-#alurikpazx .gt_striped {
+#ascmfvokhv .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#alurikpazx .gt_table_body {
+#ascmfvokhv .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2271,7 +2271,7 @@ distill-header .nav a {
   border-bottom-color: #D3D3D3;
 }
 
-#alurikpazx .gt_footnotes {
+#ascmfvokhv .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2285,7 +2285,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#alurikpazx .gt_footnote {
+#ascmfvokhv .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -2294,7 +2294,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#alurikpazx .gt_sourcenotes {
+#ascmfvokhv .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2308,7 +2308,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#alurikpazx .gt_sourcenote {
+#ascmfvokhv .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -2316,60 +2316,60 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#alurikpazx .gt_left {
+#ascmfvokhv .gt_left {
   text-align: left;
 }
 
-#alurikpazx .gt_center {
+#ascmfvokhv .gt_center {
   text-align: center;
 }
 
-#alurikpazx .gt_right {
+#ascmfvokhv .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#alurikpazx .gt_font_normal {
+#ascmfvokhv .gt_font_normal {
   font-weight: normal;
 }
 
-#alurikpazx .gt_font_bold {
+#ascmfvokhv .gt_font_bold {
   font-weight: bold;
 }
 
-#alurikpazx .gt_font_italic {
+#ascmfvokhv .gt_font_italic {
   font-style: italic;
 }
 
-#alurikpazx .gt_super {
+#ascmfvokhv .gt_super {
   font-size: 65%;
 }
 
-#alurikpazx .gt_footnote_marks {
+#ascmfvokhv .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#alurikpazx .gt_asterisk {
+#ascmfvokhv .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#alurikpazx .gt_slash_mark {
+#ascmfvokhv .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-#alurikpazx .gt_fraction_numerator {
+#ascmfvokhv .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-#alurikpazx .gt_fraction_denominator {
+#ascmfvokhv .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -2436,12 +2436,12 @@ distill-header .nav a {
 <p>In the table above, data is given out directly at the level of the physical asset.</p>
 <p>However, while it is possible to run PACTA using data at the asset-level, the back-end for both the PACTA for Investors online tool, and the free data-set provided for the PACTA for Banks desktop tool have been pre-processed. The actual data used has already been aggregated from the asset-level, to the company-level (for all companies owning the assets):</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="uvxumuqcke" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="voxqygjupy" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#uvxumuqcke .gt_table {
+#voxqygjupy .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2466,7 +2466,7 @@ distill-header .nav a {
   border-left-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_heading {
+#voxqygjupy .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2478,7 +2478,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_title {
+#voxqygjupy .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2490,7 +2490,7 @@ distill-header .nav a {
   border-bottom-width: 0;
 }
 
-#uvxumuqcke .gt_subtitle {
+#voxqygjupy .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2502,13 +2502,13 @@ distill-header .nav a {
   border-top-width: 0;
 }
 
-#uvxumuqcke .gt_bottom_border {
+#voxqygjupy .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_col_headings {
+#voxqygjupy .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2523,7 +2523,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_col_heading {
+#voxqygjupy .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2543,7 +2543,7 @@ distill-header .nav a {
   overflow-x: hidden;
 }
 
-#uvxumuqcke .gt_column_spanner_outer {
+#voxqygjupy .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2555,15 +2555,15 @@ distill-header .nav a {
   padding-right: 4px;
 }
 
-#uvxumuqcke .gt_column_spanner_outer:first-child {
+#voxqygjupy .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#uvxumuqcke .gt_column_spanner_outer:last-child {
+#voxqygjupy .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#uvxumuqcke .gt_column_spanner {
+#voxqygjupy .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2575,7 +2575,7 @@ distill-header .nav a {
   width: 100%;
 }
 
-#uvxumuqcke .gt_group_heading {
+#voxqygjupy .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2600,7 +2600,7 @@ distill-header .nav a {
   vertical-align: middle;
 }
 
-#uvxumuqcke .gt_empty_group_heading {
+#voxqygjupy .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2615,15 +2615,15 @@ distill-header .nav a {
   vertical-align: middle;
 }
 
-#uvxumuqcke .gt_from_md > :first-child {
+#voxqygjupy .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uvxumuqcke .gt_from_md > :last-child {
+#voxqygjupy .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uvxumuqcke .gt_row {
+#voxqygjupy .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2642,7 +2642,7 @@ distill-header .nav a {
   overflow-x: hidden;
 }
 
-#uvxumuqcke .gt_stub {
+#voxqygjupy .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2655,7 +2655,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#uvxumuqcke .gt_stub_row_group {
+#voxqygjupy .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2669,11 +2669,11 @@ distill-header .nav a {
   vertical-align: top;
 }
 
-#uvxumuqcke .gt_row_group_first td {
+#voxqygjupy .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#uvxumuqcke .gt_summary_row {
+#voxqygjupy .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2683,16 +2683,16 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#uvxumuqcke .gt_first_summary_row {
+#voxqygjupy .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_first_summary_row.thick {
+#voxqygjupy .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#uvxumuqcke .gt_last_summary_row {
+#voxqygjupy .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2702,7 +2702,7 @@ distill-header .nav a {
   border-bottom-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_grand_summary_row {
+#voxqygjupy .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2712,7 +2712,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#uvxumuqcke .gt_first_grand_summary_row {
+#voxqygjupy .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2722,11 +2722,11 @@ distill-header .nav a {
   border-top-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_striped {
+#voxqygjupy .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#uvxumuqcke .gt_table_body {
+#voxqygjupy .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2735,7 +2735,7 @@ distill-header .nav a {
   border-bottom-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_footnotes {
+#voxqygjupy .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2749,7 +2749,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_footnote {
+#voxqygjupy .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -2758,7 +2758,7 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#uvxumuqcke .gt_sourcenotes {
+#voxqygjupy .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2772,7 +2772,7 @@ distill-header .nav a {
   border-right-color: #D3D3D3;
 }
 
-#uvxumuqcke .gt_sourcenote {
+#voxqygjupy .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -2780,60 +2780,60 @@ distill-header .nav a {
   padding-right: 5px;
 }
 
-#uvxumuqcke .gt_left {
+#voxqygjupy .gt_left {
   text-align: left;
 }
 
-#uvxumuqcke .gt_center {
+#voxqygjupy .gt_center {
   text-align: center;
 }
 
-#uvxumuqcke .gt_right {
+#voxqygjupy .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uvxumuqcke .gt_font_normal {
+#voxqygjupy .gt_font_normal {
   font-weight: normal;
 }
 
-#uvxumuqcke .gt_font_bold {
+#voxqygjupy .gt_font_bold {
   font-weight: bold;
 }
 
-#uvxumuqcke .gt_font_italic {
+#voxqygjupy .gt_font_italic {
   font-style: italic;
 }
 
-#uvxumuqcke .gt_super {
+#voxqygjupy .gt_super {
   font-size: 65%;
 }
 
-#uvxumuqcke .gt_footnote_marks {
+#voxqygjupy .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#uvxumuqcke .gt_asterisk {
+#voxqygjupy .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#uvxumuqcke .gt_slash_mark {
+#voxqygjupy .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-#uvxumuqcke .gt_fraction_numerator {
+#voxqygjupy .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-#uvxumuqcke .gt_fraction_denominator {
+#voxqygjupy .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
