--- a/index.html
+++ b/index.html
@@ -1708,7 +1708,7 @@ function init_posts_list() {
 <div class="publishedDate">March 2, 2022</div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="posts/2022-03-02-ald-becomes-abcd/preview.png"/>
 </div>
 <div class="description">
 <h2>PACTA Terminology Update: ALD becomes ABCD</h2>
